<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="MiPushAppId">2882303761517488598</string>
    <string name="MiPushAppKey">5951748817598</string>

    <string name="action_settings">Settings</string>
    <string name="app_name">游云</string>
    <string name="button_send">发送</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_loosen_end">松开结束</string>
    <string name="button_take_photo">拍照</string>
    <string name="button_picture">图片</string>
    <string name="button_photo_gallery">相册</string>
    <string name="title_youyun">游云通讯</string>
    <string name="title_test_demo">测试Demo</string>
    <string name="btn_login_without_register">免注册登录</string>
    <string name="youyun_host">www.17youyun.com</string>
    <string name="btn_back">返回</string>
    <string name="btn_clear">清空</string>
    <string name="bottom_message">消息</string>
    <string name="bottom_contacts">联系人</string>
    <string name="bottom_group">群组</string>
    <string name="bottom_me">我</string>
    <string name="new_msg_sound_alert">新消息声音提醒</string>
    <string name="new_msg_vibrate_alert">新消息震动提醒</string>
    <string name="tel_recv_model">听筒模式</string>
    <string name="push_alert_time">勿扰时段</string>
    <string name="current_version">当前版本</string>
    <string name="version_info">版本信息</string>
    <string name="string_setting">设置</string>
    <string name="string_cancle">取消</string>
    <string name="search_group">查找群组</string>
    <string name="create_group">创建群组</string>
    <string name="confirm_create">确认创建</string>
    <string name="group_name">群名称</string>
    <string name="group_intra">群简介</string>
    <string name="mandatory">必填</string>
    <string name="optional">选填</string>
    <string name="group_member">群成员</string>
    <string name="msg_push">消息推送</string>
    <string name="msg_no_disturb">消息免打扰</string>
    <string name="clear_chat_record">清空聊天记录</string>
    <string name="exit_group">退出群组</string>
    <string name="invite">邀请</string>
    <string name="invite_member">邀请成员</string>
    <string name="confirm_invite">确认邀请</string>
    <string name="accurate_search">精准查询</string>
    <string name="dim_search">模糊查询</string>
    <string name="accurate_search_by_id">根据群组ID精准搜索</string>
    <string name="dim_search_by_name">根据群组名称模糊搜索</string>
    <string name="search">搜索</string>
    <string name="apply_add_group">申请入群</string>
    <string name="add_group_apply">入群申请</string>
    <string name="group_info">群组信息</string>
    <string name="group_intra_msg">群主很懒,没有填写简介</string>
    <string name="add_group_apply_msg">请填写入群申请</string>
    <string name="notice">通知</string>
    <string name="group_notice">群组通知</string>
    <string name="refuse">拒绝</string>
    <string name="agree">同意</string>
    <string name="click_enter_group">点击入群</string>
    <string name="verify">验证：</string>
    <string name="enter_group_apply">%1$s申请入群%2$s</string>
    <string name="agree_enter_group">%1$s已同意您加入群组%2$s的申请</string>
    <string name="refuse_enter_group">%1$已拒绝您加入群组%2$s的申请</string>
    <string name="rqcode_msg">请将二维码置于取景框内扫描。</string>
    <string name="scan">扫描</string>
    <string name="contact_detail">联系人详情</string>
    <string name="contact_im">与TA联系（IM）</string>
    <string name="contact_voip">与TA联系（VoIP）</string>
    <string name="refresh_user">刷新成员</string>
    <string name="user_list">成员列表(%1$d)</string>
    <string name="user_info">昵称：%1$s  ID：%2$s  房间ID：%3$s</string>
    <string name="more_conference">多人电话会议</string>
    <string name="hangup_leave">挂断离开</string>
    <string name="hangup">挂断</string>
    <string name="answer">接听</string>
    <string name="accept">接受</string>
    <string name="conference_invite">电话会议邀请</string>
    <string name="conference_invite_msg">%1$s邀请你加入多人电话会议</string>
    <string name="version_1">1、支持基础IM功能，支持以下消息类型：文本、表情、异步语音、照片、拍照上传；</string>
    <string name="version_2">2、支持两种聊天模式：单聊和群聊；同时群聊场景下支持基础群管理操作；</string>
    <string name="version_3">3、支持一对一实时语音通话和多人语音会议功能；同时支持基础通话操作，如静音模式切换、听筒模式切换等；</string>
    <string name="version_4">4、为方便开发者测试，联系人列表支持搜索到附近1公里内用户；</string>
    <string name="youyun_version">游云通讯\t版权所有</string>
    <string name="version_function">版本功能：</string>
    <string name="app_setting">应用设置</string>
    <string name="home">主页</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="incompatible_msg">收到一条不兼容的消息，请检查客户端版本是否最新。</string>

</resources>
