<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    tools:context=".media.ConferenceActivity">

    <include
        android:id="@+id/top"
        layout="@layout/layout_top" />

    <TextView
        android:id="@+id/tv_invite_member"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_f1f2f4"
        android:gravity="center"
        android:text="@string/invite_member"
        android:textSize="20sp" />

    <View
        android:id="@+id/v_line_list_bottom"
        style="@style/divider_line"
        android:layout_above="@id/tv_invite_member" />

    <TextView
        android:id="@+id/tv_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_margin="10dp"
        android:text="@string/user_info" />

    <TextView
        android:id="@+id/tv_call_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_user_info"
        android:layout_marginLeft="10dp" />

    <LinearLayout
        android:id="@+id/ll_mysettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_call_time"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/iv_calling_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:src="@drawable/nomute" />

        <ImageView
            android:id="@+id/iv_calling_speaker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:src="@drawable/nospeaker" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_user_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_mysettings"
        android:layout_marginTop="10dp">

        <View style="@style/divider_line" />

        <View
            style="@style/divider_line"
            android:layout_alignParentBottom="true" />

        <TextView
            android:id="@+id/tv_userlist_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:text="@string/user_list" />

        <TextView
            android:id="@+id/tv_refresh_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/refresh_user" />

    </RelativeLayout>


    <ListView
        android:id="@+id/lv_user_member"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/v_line_list_bottom"
        android:layout_below="@id/rl_user_title" />

</RelativeLayout>
