<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    tools:context="cn.youyunsample.home.SearchTempActivity">

    <include
        android:id="@+id/top"
        layout="@layout/layout_top" />

    <TextView
        android:id="@+id/tv_confirm_apply"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/color_f1f2f4"
        android:gravity="center"
        android:text="@string/apply_add_group"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_info"
            android:textColor="@color/color_000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="群名称："
                android:textColor="@color/color_999" />

            <TextView
                android:id="@+id/group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_999" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="群主："
                android:textColor="@color/color_999" />

            <TextView
                android:id="@+id/group_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_999" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="群ID："
                android:textColor="@color/color_999" />

            <TextView
                android:id="@+id/group_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_999" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/group_intra"
            android:textColor="@color/color_999" />

        <TextView
            android:id="@+id/group_intra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_999" />
    </LinearLayout>


</RelativeLayout>
